src/objects/Tract__c.object
<CustomObject>
    <fields>
        <fullName>Abstract__c</fullName>
        <label>Abstract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Current owner of the tract</description>
        <inlineHelpText>Current owner of the tract</inlineHelpText>
        <label>Owner (Account)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tracts</relationshipLabel>
        <relationshipName>Tracts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_Close_Date__c</fullName>
        <formula>Acquisition_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Effective_Date__c</fullName>
        <formula>Acquisition_Opportunity__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acquisition_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>Opportunity must be closed won acquisition</errorMessage>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed Won</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Acquisition</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracts</relationshipLabel>
        <relationshipName>Tracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquisition_PSA_Date__c</fullName>
        <formula>Acquisition_Opportunity__r.PSA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisition PSA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acres_Match_Subtract__c</fullName>
        <description>This will be checked if the total of Subtract Acres matches this tract&apos;s Net Acres</description>
        <formula>Total_Subtract_Acres__c =  netAcres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will be checked if the total of Subtract Acres matches this tract&apos;s Net Acres</inlineHelpText>
        <label>Acres Match Subtract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alt_Asset_ID__c</fullName>
        <label>Alt Asset ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basin__c</fullName>
        <label>Basin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Permian</fullName>
                </value>
                <value>
                    <fullName>Mid-Con</fullName>
                </value>
                <value>
                    <fullName>Haynesville</fullName>
                </value>
                <value>
                    <fullName>DJ</fullName>
                </value>
                <value>
                    <fullName>Eagleford</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buyer_Text__c</fullName>
        <label>Buyer Text</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date_Acquisition__c</fullName>
        <label>Close Date Acquisition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_Date_Divestiture__c</fullName>
        <label>Close Date Divestiture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Combined_Legal_Formula__c</fullName>
        <formula>/*If(State_New__c == null,&apos;&apos;,State_New__c)&amp; &quot;&quot; &amp;*/
/*If(County__c == null,&apos;&apos;, &apos;-&apos;&amp; County__c)&amp; &quot;&quot; &amp;*/
/*If(Survey_Name__c == null,&apos;&apos;, &apos;-&apos;&amp; Survey_Name__c)&amp; &quot;&quot; &amp;*/
/*If(Block__c == null,&apos;&apos;, &apos;-&apos;&amp;  Block__c)&amp; &quot;&quot; &amp;*/
If(Section__c == null,&apos;&apos;, &apos;-&apos;&amp;  Section__c)&amp; &quot;&quot; &amp;
If(Abstract__c == null,&apos;&apos;, &apos;-&apos;&amp; Abstract__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Legal Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Commission Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Tracts</relationshipLabel>
        <relationshipName>Tracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County_Text__c</fullName>
        <label>County Text</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Description__c</fullName>
        <label>Deal Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Divestiture_Close_Date__c</fullName>
        <formula>Divestiture_Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Divestiture Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Divestiture_Effective_Date__c</fullName>
        <formula>Divestiture_Opportunity__r.Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Divestiture Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Divestiture_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Divestiture Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <errorMessage>Opportunity must be closed won divestiture</errorMessage>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Divestiture</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed Won</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracts (Divestiture Opportunity)</relationshipLabel>
        <relationshipName>Tracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Divestiture_PSA_Date__c</fullName>
        <formula>Divestiture_Opportunity__r.PSA_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Divestiture PSA Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <formula>Value_Per_Acre__c *  netAcres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value per acre times net acres</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ford_Abbreviated_Status__c</fullName>
        <formula>CASE(
Ford_Tract_Status__c,
&quot;&quot;, &quot;101 - Outreach&quot;,
&quot;101 - Contact Info Not Yet Found&quot;, &quot;101 - Outreach&quot;,
&quot;103 - Outreach&quot;, &quot;101 - Outreach&quot;,
&quot;107 - Pending Investigation&quot;, &quot;101 - Outreach&quot;,
&quot;109 - Premium Investigation&quot;, &quot;101 - Outreach&quot;,
&quot;201 - Continued Discussions&quot;, &quot;201 - Continued Discussions&quot;,
&quot;301 - Rejected - Price&quot;, &quot;001 - Will Not Sell&quot;,
&quot;302 - Rejected - Not Interested&quot;, &quot;001 - Will Not Sell&quot;,
&quot;401 - Offer Outstanding&quot;, &quot;450 - Soft Commitment&quot;,
&quot;401 - Offer Outstanding&quot;, &quot;450 - Soft Commitment&quot;,
&quot;401 - Offer Outstanding&quot;, &quot;450 - Soft Commitment&quot;,
&quot;404 - Offer Outstanding - Offer Letter Sent&quot;, &quot;450 - Soft Commitment&quot;,
&quot;405 - Offer Outstanding - PSA Sent&quot;, &quot;450 - Soft Commitment&quot;,
&quot;410 - Offer Accepted&quot;, &quot;450 - Soft Commitment&quot;,
&quot;411 - Offer Accepted - Verbal&quot;, &quot;450 - Soft Commitment&quot;,
&quot;420 - Offer Expired&quot;, &quot;450 - Soft Commitment&quot;,
&quot;450 - Offer Accepted - Pending Title&quot;, &quot;600 - Hard Commitment&quot;,
&quot;501 - Offer Declined&quot;,	&quot;001 - Will Not Sell&quot;,
&quot;601 - Invoiced - Pending&quot;, &quot;601 - Closed - Payment Pending&quot;,
&quot;602 - Invoiced - Consummated&quot;, &quot;602 - Closed&quot;,
&quot;701 - Wrong Owner&quot;, &quot;101 - Outreach&quot;,
&quot;801 - EMC Rejected&quot;, &quot;801 - EMC Rejected&quot;,
&quot;901 - Title Fail - Rejected&quot;, &quot;901 - Title Fail - Rejected&quot;, 
&quot;1001 - Dropped Sold&quot;, &quot;1001 - Dropped Sold&quot;,
&quot;Duplicate&quot;, &quot;Duplicate&quot;, 
&quot;Replaced&quot;, &quot;Duplicate&quot;,
&quot;101 Outreach&quot;
)</formula>
        <label>Ford Abbreviated Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ford_Area__c</fullName>
        <label>Ford Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ford_Cost_Per_Acre__c</fullName>
        <formula>Total_Ford_Consideration__c /  netAcres__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ford Cost Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ford_Mineral_Owner__c</fullName>
        <description>should be replaced with a lookup to the contact</description>
        <inlineHelpText>should only be used for Project Ford</inlineHelpText>
        <label>Ford Mineral Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ford_Notice_Number__c</fullName>
        <inlineHelpText>should only be used for Project Ford</inlineHelpText>
        <label>Ford Notice Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ford_SRP_Consideration__c</fullName>
        <formula>netAcres__c * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>net acres times 1000</inlineHelpText>
        <label>Ford SRP Consideration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ford_Tract_Status__c</fullName>
        <description>legacy statuses from project ford, should be removed and migrated to a standard status</description>
        <inlineHelpText>ONLY use for project Ford assets, this field needs to be removed</inlineHelpText>
        <label>Ford Tract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>101 - Contact Info Not Yet Found</fullName>
                </value>
                <value>
                    <fullName>103 - Outreach</fullName>
                </value>
                <value>
                    <fullName>107 - Pending Investigation</fullName>
                </value>
                <value>
                    <fullName>109 - Premium Investigation</fullName>
                </value>
                <value>
                    <fullName>201 - Continued Discussions</fullName>
                </value>
                <value>
                    <fullName>301 - Rejected - Price</fullName>
                </value>
                <value>
                    <fullName>302 - Rejected - Not Interested</fullName>
                </value>
                <value>
                    <fullName>401 - Offer Outstanding</fullName>
                </value>
                <value>
                    <fullName>404 - Offer Outstanding - Offer Letter Sent</fullName>
                </value>
                <value>
                    <fullName>405 - Offer Outstanding - PSA Sent</fullName>
                </value>
                <value>
                    <fullName>410 - Offer Accepted</fullName>
                </value>
                <value>
                    <fullName>411 - Offer Accepted - Verbal</fullName>
                </value>
                <value>
                    <fullName>420 - Offer Expired</fullName>
                </value>
                <value>
                    <fullName>450 - Offer Accepted - Pending Title</fullName>
                </value>
                <value>
                    <fullName>501 - Offer Declined</fullName>
                </value>
                <value>
                    <fullName>601 - Invoiced - Pending</fullName>
                </value>
                <value>
                    <fullName>602 - Invoiced - Consummated</fullName>
                </value>
                <value>
                    <fullName>701 - Wrong Owner</fullName>
                </value>
                <value>
                    <fullName>801 - EMC Rejected</fullName>
                </value>
                <value>
                    <fullName>901 - Title Fail - Rejected</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>1001 - Dropped Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Legal_Name__c</fullName>
        <formula>LandGridTract__r.Name  &amp; &apos; &apos; &amp; Quarter_Call__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gain_on_Asset__c</fullName>
        <formula>Fair_Market_Value__c -  Total_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>FMV - Total Cost</inlineHelpText>
        <label>Gain on Asset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grid_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has a quarter call that can not be automapped</description>
        <inlineHelpText>Has a quarter call that can not be automapped</inlineHelpText>
        <label>Grid Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gross_Acres__c</fullName>
        <label>Gross Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instrument_Type__c</fullName>
        <label>Instrument Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OGL</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ORRI</fullName>
                </value>
                <value>
                    <fullName>Surface</fullName>
                </value>
                <value>
                    <fullName>Commission</fullName>
                </value>
                <value>
                    <fullName>NPRI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LV_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>the Landvantage Lead ID, only populated for tracts that exist in both Salesforce and Landvantage</inlineHelpText>
        <label>LV Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LV_Tract_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Tract ID for assets that exist in Landvantage</inlineHelpText>
        <label>LV Tract ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LV_URL__c</fullName>
        <formula>IF(ISBLANK(LV_Lead_ID__c), &quot;NA&quot;, &quot;https://srp.landvant.com/Lead/Edit?id=&quot; &amp; LV_Lead_ID__c)</formula>
        <label>LV URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandGridTract_Name__c</fullName>
        <formula>/*If(State_New__c == null,&apos;&apos;,State_New__c)&amp; &quot;&quot; &amp; */
/*If(County__c == null,&apos;&apos;, &apos;-&apos;&amp; County__c)&amp; &quot;&quot; &amp; */
/*If(Survey_Name__c == null,&apos;&apos;, &apos;-&apos;&amp; Survey_Name__c)&amp; &quot;&quot; &amp; */
/*If(Block__c == null,&apos;&apos;, &apos;-&apos;&amp; Block__c)&amp; &quot;&quot; &amp; */
If(Section__c == null,&apos;&apos;, &apos;-&apos;&amp; Section__c)&amp; &quot;&quot; &amp; 
If(Abstract__c == null,&apos;&apos;, &apos;-&apos;&amp; Abstract__c) &amp; &quot;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LandGridTract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LandGridTract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>LandGridTract</label>
        <referenceTo>LandGridTract__c</referenceTo>
        <relationshipLabel>Tracts (LandGridTract)</relationshipLabel>
        <relationshipName>Tracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeaseName__c</fullName>
        <label>LeaseName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lease_Legal_Description__c</fullName>
        <label>Lease Legal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Link to Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tracts (Opportunity)</relationshipLabel>
        <relationshipName>Tracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lots__c</fullName>
        <description>Lot detail</description>
        <inlineHelpText>Lot detail</inlineHelpText>
        <label>Lots</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OTG_Cost_Per_Acre__c</fullName>
        <inlineHelpText>OTG Cost per Acre</inlineHelpText>
        <label>OTG Cost Per Acre</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OTG_Cost__c</fullName>
        <formula>netAcres__c * OTG_Cost_Per_Acre__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OTG Price per acre x Net Acres</inlineHelpText>
        <label>OTG Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operator_Name__c</fullName>
        <label>Operator Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Capitalized_Costs__c</fullName>
        <label>Other Capitalized Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Date_Acquisition__c</fullName>
        <label>PSA Date Acquisition</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PSA_Date_Divestiture__c</fullName>
        <label>PSA Date Divestiture</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Package_ID__c</fullName>
        <label>Purchase Package ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter_Call__c</fullName>
        <inlineHelpText>Quarter Call</inlineHelpText>
        <label>Quarter Call</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRC_Number__c</fullName>
        <label>RRC Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_Party__c</fullName>
        <label>Responsible Party</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rayne</fullName>
                </value>
                <value>
                    <fullName>Chandler</fullName>
                </value>
                <value>
                    <fullName>Ryan</fullName>
                </value>
                <value>
                    <fullName>Patrick</fullName>
                </value>
                <value>
                    <fullName>Matt Scott</fullName>
                </value>
                <value>
                    <fullName>Billy</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>DCD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Package_ID__c</fullName>
        <label>Sales Package ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtract_Count__c</fullName>
        <label>Subtract Count</label>
        <summaryForeignKey>Subtract__c.Tract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Title_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Title Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost_Per_Acre__c</fullName>
        <formula>if (netAcres__c == 0,0,Total_Cost__c /  netAcres__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Costs divided by Net Acres</inlineHelpText>
        <label>Total Cost Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <description>OTG Costs plus Commissions and title</description>
        <formula>(netAcres__c *  OTG_Cost_Per_Acre__c) +  Commission_Amount__c +  Title_Cost__c +  Other_Capitalized_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OTG Costs plus Commissions and title</inlineHelpText>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Ford_Consideration__c</fullName>
        <formula>Total_Cost__c +  Ford_SRP_Consideration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Cost to Ford animals, includes amount paid to SRP</inlineHelpText>
        <label>Total Ford Consideration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Instrument_Acres__c</fullName>
        <label>Total Instrument Acres</label>
        <summarizedField>Subtract__c.Subtract_Acres__c</summarizedField>
        <summaryForeignKey>Subtract__c.Tract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Instrument_Gross_Acres__c</fullName>
        <label>Total Instrument Gross Acres</label>
        <summarizedField>Subtract__c.Subtract_Gross_Acres__c</summarizedField>
        <summaryForeignKey>Subtract__c.Tract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subtract_Acres__c</fullName>
        <label>Total Subtract Acres</label>
        <summarizedField>Subtract__c.Subtract_Acres__c</summarizedField>
        <summaryForeignKey>Subtract__c.Tract__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Subtracts__c</fullName>
        <label>Number of Subtracts</label>
        <summaryForeignKey>Subtract__c.Tract__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tract_Legal__c</fullName>
        <label>Tract Full Legal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Per_Acre__c</fullName>
        <inlineHelpText>FMV for the tract</inlineHelpText>
        <label>FMV Per Acre</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aoiNetAcres__c</fullName>
        <description>Sum of net acres in AOI</description>
        <inlineHelpText>Sum of net acres in AOI</inlineHelpText>
        <label>AOI Net Acres</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>depth__c</fullName>
        <label>Depth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gDocAssetId__c</fullName>
        <label>GDoc Asset ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>link__c</fullName>
        <formula>&quot;/&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maxPPA__c</fullName>
        <formula>if(aoiNetAcres__c &lt;&gt; 0, maxPrice__c / aoiNetAcres__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Price Per Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>maxPrice__c</fullName>
        <description>Max Price for Tract</description>
        <inlineHelpText>Max Price for Tract</inlineHelpText>
        <label>Max Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>netAcreageUnits__c</fullName>
        <label>Net Acreage Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NRA</fullName>
                </value>
                <value>
                    <fullName>NMA</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>netAcres__c</fullName>
        <label>Net Acres</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>percentCovered__c</fullName>
        <description>Sum of percentage in AOI for project AOI tract</description>
        <inlineHelpText>Sum of percentage in AOI for project AOI tract</inlineHelpText>
        <label>percentCovered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rptPercentCovered__c</fullName>
        <description>percent covered adapted to percentage format for reporting</description>
        <formula>percentCovered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Covered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>targetOTGCostPerAcre__c</fullName>
        <label>Target OTG Cost Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>targetPPA__c</fullName>
        <formula>if(aoiNetAcres__c &lt;&gt; 0, targetPrice__c /  aoiNetAcres__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Price Per Acre</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>targetPrice__c</fullName>
        <description>Sum of target price for Project AOI Tract</description>
        <inlineHelpText>Sum of target price for Project AOI Tract</inlineHelpText>
        <label>Target Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>titleSourceResetDate__c</fullName>
        <description>System field used for determining last edit to field that indicates Title Source functionality should be reset.</description>
        <label>Title Source Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>titleSourceType__c</fullName>
        <formula>TEXT(titleSource__r.type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>titleSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Title Source</label>
        <referenceTo>TitleWorkJob__c</referenceTo>
        <relationshipLabel>Tracts</relationshipLabel>
        <relationshipName>Tracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tract</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Ford_Tract_Status__c</columns>
        <columns>Instrument_Type__c</columns>
        <columns>LandGridTract_Name__c</columns>
        <columns>Quarter_Call__c</columns>
        <columns>OTG_Cost_Per_Acre__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LV_Lead_ID__c</columns>
        <columns>LV_Tract_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Created_last_10_days</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Instrument_Type__c</columns>
        <columns>LandGridTract_Name__c</columns>
        <columns>Quarter_Call__c</columns>
        <columns>OTG_Cost_Per_Acre__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LV_Lead_ID__c</columns>
        <columns>LV_Tract_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Tract__c.Standard_Tract_Record</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>All - Created last 10 days</label>
    </listViews>
</CustomObject>